--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1386,6 +1386,13 @@ label.mat-checkbox-layout {
             font-weight: 500;
             margin-bottom: 0;
         }
+        & .main_title {
+            font-size: 22px;
+            font-weight: 600;
+            margin-bottom: 15;
+            text-transform: uppercase;
+            color: #6c757d;
+        }
 
         & .value_section {
             width: 100px;
