--- a/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
+++ b/src/app/admin/orders/components/print-order-invoice/print-order-invoice.component.html
@@ -1,7 +1,11 @@
 <div class="ticket only-print" id="print-section">
     <p class="centered">
-        <b class="title">Black bamboo restaurant</b>
-        <br>Mukka, surathkal</p>
+        <b class="title">{{companyData?.companyName}}</b>
+        <br>{{branchData?.branchTitle}} {{branchData?.branchAddress}}</p>
+    <div class="flex justify-content-between">
+        <p class="mb-0">Order By :</p>
+        <p class="mb-0">Date By :</p>
+    </div>
     <table class="table">
         <thead>
             <tr>
