--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1777,7 +1777,7 @@ label.mat-checkbox-layout {
 
     
 .only-print{
-    display: none !important;
+    // display: none !important;
 }
 @media print { 
     
