--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1407,6 +1407,14 @@ label.mat-checkbox-layout {
             margin-bottom: 0;
             text-align: right;
         }
+        &.totalAmountText{
+            .title,
+            .value_section {
+                // font-size: ;
+                font-size: 17px;
+                font-weight: 600;
+            }
+        }
     }
 }
 
@@ -1731,15 +1739,42 @@ label.mat-checkbox-layout {
     .tab_footer{
         .ammount_box{
             padding: 5px 15px;
-            h3{
-                margin-bottom: 0px;
-                font-size: 1.8rem;
+            .orderAmuntChip{
+                font-size: 1.4rem;
+                padding: 5px 10px 5px 30px;
+                border: 1px solid #faae1a;
+                border-radius: 10px;
+                color: #000000;
+                line-height: 1;
                 font-weight: 500;
-                color: #505050;
-                span{
-                    color: #adadad;
+                position: relative;
+                background-color: rgba(250, 174, 26, 0.4);
+                &.paid{
+                    border-color: #2faa4b;
+                    color: #2faa4b;
+                    background-color: rgba(47, 170, 75, 0.2);
+                }
+                &::before{
+                    content: 'Rs.';
+                    font-size: 1.4rem;
+                    position: absolute;
+                    left: 5px;
+                    top: 50%;
+                    -webkit-transform: translateY(-50%);
+                    -moz-transform: translateY(-50%);
+                    -ms-transform: translateY(-50%);
+                    transform: translateY(-50%);
                 }
             }
+            // h3{
+            //     margin-bottom: 0px;
+            //     font-size: 1.8rem;
+            //     font-weight: 500;
+            //     color: #505050;
+            //     span{
+            //         color: #adadad;
+            //     }
+            // }
         }
     }
 }
