--- a/src/app/admin/orders/components/print-kot/print-kot.component.html
+++ b/src/app/admin/orders/components/print-kot/print-kot.component.html
@@ -1,4 +1,4 @@
-<div class="ticket only-print" id="print-section">
+<!-- <div class="ticket only-print" id="print-section">
     <p class="centered">
         <b class="title">Black bamboo restaurant</b>
         <br>Mukka, surathkal</p>
@@ -24,6 +24,79 @@
         </tbody>
     </table>
     <p class="centered">Thank You :(</p>
+</div> -->
+
+<div class="ticket only-print" id="print-section">
+    <p class="centered">
+        <b class="title">{{savedOrderData?.branch.branchTitle}}</b>
+        <br>{{savedOrderData?.branch.branchAddress}}</p>
+    <div class="d-flex justify-content-between">
+        <p class="mb-0">By : {{ savedOrderData?.bearer.firstName }} {{ savedOrderData?.bearer.lastName }}</p>
+        <p class="mb-0">{{ savedOrderData?.created_at | datex: 'DD-MM-YYYY hh:mm A' }}</p>
+    </div>
+    <div class="d-flex justify-content-between">
+        <p class="mb-0">#{{ savedOrderData?.id }}</p>
+    </div>
+    <div>
+        <ng-container *ngFor="let item of orderData?.tables; let i=index;">
+            {{ item.tableId }} 
+            <ng-container *ngIf="i != (orderData?.tables.length - 1)">
+                , 
+            </ng-container>
+        </ng-container>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th class="quantity">Q.</th>
+                <th class="description">Desc.</th>
+                <th class="price">Rs.</th>
+            </tr>
+        </thead>
+        <tbody>
+            <ng-container *ngFor="let item of orderData?.items;let i=index;">
+                <tr>
+                    <td class="quantity">x{{ item.quantity }}</td>
+                    <td class="description">{{ item.productName }} {{item.advancedPriceTitle ? '('+ item.advancedPriceTitle +')' : ''}}</td>
+                    <td class="price">{{ item.totalPrice | currency: '':'' }}</td>
+                </tr>
+            </ng-container>
+            <tr *ngIf="!orderData?.taxDisabled">
+                <td class="quantity"></td>
+                <th class="description">CGST</th>
+                <th class="price">{{ orderData?.cgst | currency: '':'' }}</th>
+            </tr>
+            <tr  *ngIf="!orderData?.taxDisabled">
+                <td class="quantity"></td>
+                <th class="description">SGST</th>
+                <th class="price">{{ orderData?.sgst | currency: '':'' }}</th>
+            </tr>
+            <tr *ngIf="orderData?.deliverCharge && orderData?.deliverCharge > 0">
+                <td class="quantity"></td>
+                <th class="description">Del. Chrg.</th>
+                <th class="price">{{ orderData?.deliverCharge | currency: '':'' }}</th>
+            </tr>
+            <tr *ngIf="orderData?.packingCharge && orderData?.packingCharge > 0">
+                <td class="quantity"></td>
+                <th class="description">Pkg. Chrg.</th>
+                <th class="price">{{ orderData?.packingCharge | currency: '':'' }}</th>
+            </tr>
+            <tr *ngIf="orderData?.discountValue && orderData?.discountValue > 0">
+                <td class="quantity"></td>
+                <th class="description">Discount</th>
+                <th class="price">{{ orderData?.discountValue | currency: '':'' }}</th>
+            </tr>
+            <tr>
+                <th class="quantity"></th>
+                <th class="description">TOTAL</th>
+                <th class="price">{{ orderData?.orderAmount | currency: '':'' }}</th>
+            </tr>
+        </tbody>
+    </table>
+
+    <p>&nbsp;</p>
+    <p class="centered">Thank You :(
+        <br>Visit again</p>
 </div>
 
 <div class="hidden-print text-center ew-300">
