--- a/src/app/admin/report-manager/report-manager.component.html
+++ b/src/app/admin/report-manager/report-manager.component.html
@@ -63,6 +63,16 @@
                                     </mat-select>
                                 </mat-form-field>
                             </div>
+                            <div class="col-xl-2 col-md-3 col-sm-6 col-12">
+                                <mat-form-field appearance="outline" class="w-100 pb-0">
+                                    <mat-label>Payment Method</mat-label>
+                                    <mat-select formControlName="paymentMethod" multiple>
+                                        <ng-container *ngFor="let item of paymentMethodList;">
+                                            <mat-option [value]="item.id">{{ item.methodTitle }}</mat-option>
+                                        </ng-container>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div>
                             <div class="col-xl-auto col-md-2 col-sm-6 col-12">
                                 <button mat-raised-button class="mr-10" type="submit" color="primary" >Generate</button>
                             </div>
@@ -116,6 +126,7 @@
                                 <th >Order No</th>
                                 <th >Order Amount</th>
                                 <th>Order Status</th>
+                                <th>Payment Method</th>
                                 <th class="ew-250">Ordered At</th>
                             </tr>
                         </thead>
@@ -136,6 +147,9 @@
                                     <td>{{item.orderAmount | currency:'':''}}</td>
                                     <td>
                                         {{item.orderStatus | titlecase}}
+                                    </td>
+                                    <td>
+                                        {{item.payment_method?.methodTitle | titlecase}}
                                     </td>
                                     <td>
                                         {{item.created_at | datex:'DD-MM-YYYY hh:mm a'}}
