--- a/src/app/admin/orders/components/print-kot/print-kot.component.html
+++ b/src/app/admin/orders/components/print-kot/print-kot.component.html
@@ -37,6 +37,18 @@
     <div class="d-flex justify-content-between">
         <p class="mb-0">#{{ savedOrderData?.id }}</p>
     </div>
+    <div *ngIf="savedOrderData?.customer">
+        <br>
+        <div class="customerAddress">
+            <p style="line-height: 1;">&nbsp;</p>
+            <p>To: {{savedOrderData?.customer.customerName}}</p>
+            <p>Number : {{savedOrderData?.customer.mobileNumber}}</p>
+            <p>Address : {{savedOrderData?.customerAddress}}</p>
+            <p>Info : {{savedOrderData?.relatedInfo}}</p>
+            <p style="line-height: 1;">&nbsp;</p>
+        </div>
+        <br>
+    </div>
     <div>
         <ng-container *ngFor="let item of orderData?.tables; let i=index;">
             {{ item.tableId }} 
@@ -48,55 +60,21 @@
     <table class="table">
         <thead>
             <tr>
-                <th class="quantity">Q.</th>
                 <th class="description">Desc.</th>
-                <th class="price">Rs.</th>
+                <th class="price"></th>
+                <th class="quantity">Q.</th>
             </tr>
         </thead>
         <tbody>
             <ng-container *ngFor="let item of orderData?.items;let i=index;">
                 <tr>
-                    <td class="quantity">x{{ item.quantity }}</td>
                     <td class="description">{{ item.productName }} {{item.advancedPriceTitle ? '('+ item.advancedPriceTitle +')' : ''}}</td>
-                    <td class="price">{{ item.totalPrice | currency: '':'' }}</td>
+                    <td class="price">{{item.isParcel ? 'PARCEL':''}}</td>
+                    <td class="quantity">{{ item.quantity }}</td>
                 </tr>
             </ng-container>
-            <tr *ngIf="!orderData?.taxDisabled">
-                <td class="quantity"></td>
-                <th class="description">CGST</th>
-                <th class="price">{{ orderData?.cgst | currency: '':'' }}</th>
-            </tr>
-            <tr  *ngIf="!orderData?.taxDisabled">
-                <td class="quantity"></td>
-                <th class="description">SGST</th>
-                <th class="price">{{ orderData?.sgst | currency: '':'' }}</th>
-            </tr>
-            <tr *ngIf="orderData?.deliverCharge && orderData?.deliverCharge > 0">
-                <td class="quantity"></td>
-                <th class="description">Del. Chrg.</th>
-                <th class="price">{{ orderData?.deliverCharge | currency: '':'' }}</th>
-            </tr>
-            <tr *ngIf="orderData?.packingCharge && orderData?.packingCharge > 0">
-                <td class="quantity"></td>
-                <th class="description">Pkg. Chrg.</th>
-                <th class="price">{{ orderData?.packingCharge | currency: '':'' }}</th>
-            </tr>
-            <tr *ngIf="orderData?.discountValue && orderData?.discountValue > 0">
-                <td class="quantity"></td>
-                <th class="description">Discount</th>
-                <th class="price">{{ orderData?.discountValue | currency: '':'' }}</th>
-            </tr>
-            <tr>
-                <th class="quantity"></th>
-                <th class="description">TOTAL</th>
-                <th class="price">{{ orderData?.orderAmount | currency: '':'' }}</th>
-            </tr>
         </tbody>
     </table>
-
-    <p>&nbsp;</p>
-    <p class="centered">Thank You :(
-        <br>Visit again</p>
 </div>
 
 <div class="hidden-print text-center ew-300">
