--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1742,6 +1742,7 @@ label.mat-checkbox-layout {
         margin-bottom: 0px;
         font-weight: 500;
         color: #505050;
+        white-space: nowrap;
     }
     .tab_footer{
         .ammount_box{
